styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Mulish', sans-serif;
    color: rgb(51, 51, 51);
}

button {
    font-family: 'Mulish', sans-serif;
}

path, i, svg {
    pointer-events: none;
}

.colors {
    min-height: 80vh;
    display: flex;
    color: rgb(212, 212, 212);
}

.color {
    height: 80vh;
    display: flex;
    flex-direction: column;
    flex: 1;
    align-items: center;
    justify-content: space-evenly;
    position: relative;
    overflow: hidden;
}

.color h2 {
    font-size: 2rem;
    cursor: pointer;
}

.controls {
    display: flex;
    flex-direction: column;
}

.sliders {
    display: flex;
    flex-direction: column;
    position: absolute;
    bottom: 0;
    background: white;
    padding: 1rem;
    width: 80%;
    border-top-right-radius: 1rem;
    border-top-left-radius: 1rem;

    /* adjustment */
    opacity: 0;
    transform: translateY(100px);
    transition: all 0.5s ease-in-out;
    pointer-events: none;
}

.sliders.active {
    opacity: 1;
    transform: translateY(0);
    pointer-events: all;
}

.sliders button {
    position: absolute;
    top: 10px;
    right: 10px;
    padding: 0.3rem;
    border-radius: 50%;
    width: 1.2rem;
    height: 1.2rem;
    border: none;
    background: rgb(73, 73, 73);
    color: white;
    cursor: pointer;
    font-weight: bold;
    font-size: 11px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.panel {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    height: 20vh;
}

.panel button {
    font-size: 1.2rem;
    margin: 1rem;
    padding: 1rem 2rem;
    background: rgb(31, 33, 63);
    border: none;
    color: white;
    cursor: pointer;
    border-radius: 1rem;
}

.panel p {
    font-size: 1.2rem;
}

.library-panel, .generate-panel, .save-panel {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.adjust, .lock {
    font-size: 2rem;
    border: none;
    cursor: pointer;
    background: none;
    margin: 2rem 0;
}

input[type="range"] {
    -webkit-appearance: none;
    margin: 1rem 0;
    width: 100%;
    position: relative;
    border-radius: 1rem;
    cursor: pointer;
}

input[type=range]::-webkit-slider-thumb {
    -webkit-appearance: none;
    border: none;
    height: 12px;
    width: 12px;
    border-radius: 50%;
    background: white;
}

.copy-container, .save-container, .library-container {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background: rgba(0, 0, 0, 0.5);
    display: flex;
    justify-content: center;
    align-items: center;
    transition: all 0.5s ease-in-out;

    opacity: 0;
    pointer-events: none;
}

.copy-container.active, .save-container.active, .library-container.active {
    opacity: 1;
    pointer-events: all;
}

.copy-popup, .save-popup, .library-popup {
    background: white;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    border-radius: 2rem;
    transition: transform 0.5s ease;
    transform: translateY(-2rem);
    min-width: 30%;
    min-height: 30vh;
}

.copy-popup.active, .save-popup.active, .library-popup.active {
    transform: translateY(0);
}

.copy-popup h4, .save-popup h4, .library-popup h4 {
    font-size: 2rem;
    padding: 2rem;
}

.save-popup h4, .library-popup h4 {
    margin-top: 1rem;
}

.save-name {
    font-size: 1.5rem;
    padding: 1rem;
    border: 2px solid rgb(60, 60, 92);
}

.close-save, .close-library {
    position: absolute;
    top: 1rem;
    right: 1rem;
    background: rgb(73, 73, 73);
    color: white;
    cursor: pointer;
    font-weight: bold;
    border: none;
    padding: 0.5rem;
    border-radius: 50%;
    width: 1.5rem;
    height: 1.5rem;
    display: flex;
    align-items: center;
    justify-content: center;
}

.submit-save {
    margin: 2rem;
    padding: 1rem 3rem;
    background: rgb(60, 60, 92);
    color: white;
    border: none;
    border-radius: 10px;
    cursor: pointer;
}

.library-popup {
    min-width: 60%;
    max-height: 50vh;
    overflow-y: scroll;
    padding: 1rem;
    justify-content: flex-start;
}

.custom-palette {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    padding: 2rem;
    width: 100%;
}

.custom-palette h4 {
    flex: 1;
}

.small-preview {
    display: flex;
    flex: 1;
}

.small-preview div {
    flex: 1;
    height: 5rem;
}

.pick-palette-btn {
    height: 5rem;
    border: none;
    cursor: pointer;
    padding: 0.5rem;
    font-size: 1rem;
    font-weight: 600;
    background-color: rgb(60, 60, 92);
    color: white; 
}

@media(max-width: 1024px) {
    .color h2 {
        font-size: 1.8rem;
    }
}

@media(max-width: 745px) {
    .adjust {
        display: none;
    }
    .colors {
        flex-direction: column;
        height: calc(100vh - 15vh);
    }
    .color {
        flex-direction: row;
    }
    .panel {
        height: 15vh;
    }
}

@media(max-width: 480px) {
    .color h2 {
        font-size: 1.6rem;
    }
    .colors {
        height: calc(100vh - 14vh);
    }
    .panel {
        height: 14vh;
    }
    .lock {
        font-size: 1.5rem;
    }
}

@media(max-width: 350px) {
    .panel button {
        margin: 0.5rem;
        padding: 1rem 1.5rem;
    }
}

